--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "project1-Glebov-m25-555"
+name = "project1-Vladimirov-m25-555"
 version = "0.1.0"
 description = ""
 authors = ["Daniil <vladidan2003@mail.ru>"]
